proper error processing for bug #690203 to detect a true type collection.  The code previously ignored error returns.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@9295 a1074d23-0009-0410-80fe-cf8c14f379e6